# birbs

./: .gitignore  Cargo.toml  README.md  justfile
.cargo/: config.toml
src/: flickr.rs  main.rs  publish.rs  serve.rs
www/birbs/: package-lock.json  package.json
www/birbs/src/routes/: +layout.svelte  +page.svelte  +page.ts  DetectionFile.svelte  DetectionRow.svelte  Header.svelte  HighConfidences.svelte  Today.svelte  styles.css
www/birbs/src/routes/about/: +page.svelte  +page.ts
www/birbs/src/routes/birds/[slug]/: +page.svelte  +page.ts
www/birbs/src/routes/today/: +page.svelte  +page.ts  Today.svelte
